@@ -1,1 +1,1 @@
-https://issues.apache.org/jira/browse/JENA-65 - Laurent Pellegrino
+https://issues.apache.org/jira/browse/JENA-69 - Laurent Pellegrino
